#192: adds Linux GraalVM build